--- a/docs/basic/collecties/Netflix-and-random.qmd
+++ b/docs/basic/collecties/Netflix-and-random.qmd
@@ -1,8 +1,8 @@
-# Training - Array - Netflix and random
+# Array: Netflix and random
 
-Je zit met je (aanstaande?) geliefde op jouw bed in je kekke studentenkamer. Samen met je geliefde wil je op Netflix een film gaan kijken. Aangezien je alleen maar fan bent van Avant-garde films en je geliefde ook een plezier wilt doen, heb jij al jouw eigen gemaakte applicatie klaarliggen. Deze applicatie gaat jullie helpen met het kiezen van de film. 
+Je zit met je (aanstaande?) geliefde op jouw bed in je kekke studentenkamer. Samen wil je op Netflix een film gaan kijken. Aangezien je alleen maar fan bent van Avant-garde films en je geliefde ook een plezier wilt doen, heb jij al jouw eigen gemaakte applicatie klaarliggen. Deze applicatie gaat jullie helpen met het kiezen van de film. 
 
-Maak deze applicatie waar er tussen vijf verschillende genres door middel van radiobuttons gekozen kan worden. Wanneer er op een radiobutton geklikt wordt moet er een willekeurige film uit dat genre zichtbaar worden. 
+Maak deze app waar er tussen vijf genres gekozen kan worden. Na het kiezen van een genre moet de title van een willekeurige film uit dat genre zichtbaar worden. 
 
 Deze films komen uit vijf verschillende arrays (elke array heeft 1 genre).
 
