--- a/docs/basic/collecties/VlaggenVanDeWereld.qmd
+++ b/docs/basic/collecties/VlaggenVanDeWereld.qmd
@@ -1,4 +1,4 @@
-# Training - Listmethodes - Vlaggen van de wereld
+# Listmethodes: Vlaggen van de wereld
 
 Maak een applicatie waarmee een gebruiker vlaggen kan maken. Een vlag bestaat uit drie kleuren. Deze drie moeten in een array worden opgeslagen. Wanneer een gebruiker drie kleuren heeft gekozen (een voor de bovenste balk, een voor de middelste en een voor de onderste) kan hij de vlag vervolgens invoeren in het systeem. De vlaggen worden opgeslagen in een List. Geef elke vlag ook een naam (van een fictief land). Dubbele landen mogen niet voorkomen in de lijst van vlaggen. 
 
