--- a/docs/basic/conditioneel/Hoger-lager.qmd
+++ b/docs/basic/conditioneel/Hoger-lager.qmd
@@ -1,4 +1,4 @@
-# Training - Hoger-lager
+# Random: Hoger-lager
 
 Schrijf een programma dat voldoet aan de volgende requirements:
 1. Het programma maakt een willekeurig getal aan en onthoudt dit in een variabel, maar laat het niet zien op het scherm. 
@@ -7,7 +7,7 @@ Schrijf een programma dat voldoet aan de volgende requirements:
 
 ![Aangeleverd ontwerp user interface](figures/Hoger-lager-ui.png)
 
-## Uitbreiding
-Heb je naast _keuzestructuren_ extra oefening nodig op het gebied van _variabelen_? Maak dan deze casus. Breid casus 1 uit met de volgende functionaliteiten:
-1. Als het geraden getal te laag is dan wordt de tekstkleur van het label blauw, en als het getal te hoog is dan wordt de tekstkleur rood. 
-2. Het aantal beurten dat de gebruiker nodig heeft om het getal te raden wordt door het programma bijgehouden en getoond in de de MessageBox: "Geraden in 123 keer!".
+Mogelijke uitbreiding:
+
+1. Als het geraden getal te laag is dan wordt er een kleiner-dan-teken (`<`) achter gezet, als het getal te hoog is een groter-dan (`>`).
+2. Het aantal beurten dat de gebruiker nodig heeft om het getal te raden wordt door het programma bijgehouden en getoond nadat het getal geraden is. 
