--- a/docs/basic/conditioneel/Wachtwoord-check.qmd
+++ b/docs/basic/conditioneel/Wachtwoord-check.qmd
@@ -1,7 +1,7 @@
-
-# Training - Wachtwoord check
+# Berekenen: Wachtwoord check
 
 Schrijf een programma dat voldoet aan de volgende requirements:
+
 1. Gebruiker kan een wachtwoord invullen (wachtwoord is niet zichtbaar, er staan bolletjes of sterretjes). Na het invullen van het wachtwoord klikt de gebruiker op een knop. 
 2. Een panel geeft met 4 kleuren aan hoe sterk het wachtwoord is. Indien het wachtwoord sterk is dan is het panel groen, middelmatig sterk dan is het geel, zwak dan is het panel rood en heel zwak dan is het panel zwart. a. Sterk (groen): er zit een cijfer 1, 2 of 3 in het wachtwoord EN het wachtwoord heeft een lengte groter dan 3. 
 	1. Sterk (groen): er zit een cijfer 1, 2 of 3 in het wachtwoord EN het wachtwoord heeft een lengte groter dan 3. 
