--- a/docs/basic/methoden/training_Madlad-teksten.qmd
+++ b/docs/basic/methoden/training_Madlad-teksten.qmd
@@ -1,4 +1,4 @@
-# Training - Mad lad teksten
+# Algo: Mad lad teksten
 
 Een Mad lad tekst is een tekst waarbij het aantal karakters even is en waarbij de tweede helft van de string het spiegelbeeld is van de eerste helft. Bijvoorbeeld de strings **koffieeiffok**, **waterretaw** en **brillirb** zijn allemaal Mad lad teksten.
 
