--- a/docs/basic/var/training_Euro-Dollar-Converter.qmd
+++ b/docs/basic/var/training_Euro-Dollar-Converter.qmd
@@ -1,4 +1,4 @@
-# Euro-Dollar Converter
+# Variabelen, bewerkingen en conversies:  Euro-Dollar Converter
 
 ## Doelen
  + Omgaan met verschillende typen (int, double, string).
