--- a/docs/basic/collecties/Fruitautomaat.qmd
+++ b/docs/basic/collecties/Fruitautomaat.qmd
@@ -1,4 +1,4 @@
-# Training - Array - Fruitautomaat
+# Array: Fruitautomaat
 
 Maak een fruitautomaat‐applicatie. Maak deze zo dat je met een druk op de knop drie verschillende plaatjes te zien krijgt. Zorg er voor dat je de code zo maakt dat deze makkelijk uit te breiden is van bijvoorbeeld 3 naar meerdere “slots” (plaatjes).
 
