--- a/docs/basic/conditioneel/BTW-berekenen.qmd
+++ b/docs/basic/conditioneel/BTW-berekenen.qmd
@@ -1,4 +1,4 @@
-# Training - Prijzen met BTW berekenen
+# Berekenen: Prijzen met BTW
 
 Maak een programma waarbij je een prijs in een textbox kunt zetten. Dan moet je als gebruiker nog de keus hebben tussen BTW tarief hoog en laag. Zet deze twee keuzes in een combobox of gebruik een radio button. Afhankelijk van de keus moet je na het drukken op de knop de prijs inclusief 6% of 21% BTW tonen.
 
