--- a/docs/basic/methoden/training_methodElkaarAchterstevoren.qmd
+++ b/docs/basic/methoden/training_methodElkaarAchterstevoren.qmd
@@ -1,4 +1,4 @@
-# Methode: ElkaarAchterstevoren
+# Method: ElkaarAchterstevoren
 
 Maak een methode `ElkaarAchterstevoren` die als returnwaarde een `bool` heeft en 2 parameters van het type `String`. De methode geeft `true` terug precies dan als de ene string gelijk is aan de andere achterstevoren.
 
