--- a/docs/basic/lussen/training_Het-goede-getal.qmd
+++ b/docs/basic/lussen/training_Het-goede-getal.qmd
@@ -1,4 +1,4 @@
-# While - Het goede getal
+# While: Het goede getal
 
 Laat de gebruiker een getal invoeren. Controleer dat het een getal tussen de 0 en 10 is. Na een druk op de knop ga je willekeurige getallen genereren totdat je het getal van de gebruiker hebt. Dus stel dat het getal 6 is ingevoerd. Dan ga je een willekeurig getal genereren tussen de 0 en 10. Stel je trekt 3, dan moet je dus nogmaals gaan genereren. Dit blijf je net zolang herhalen tot je een 6 hebt getrokken. Je toont een melding aan de gebruiker: “Het goede getal is na 3 keer gevonden!”.
 
