--- a/docs/basic/lussen/training_Muziekgenerator.qmd
+++ b/docs/basic/lussen/training_Muziekgenerator.qmd
@@ -1,4 +1,4 @@
-# For - Muziekgenerator
+# For: Muziekgenerator
 
 Maak een applicatie waarbij de gebruiker het aantal noten dat er achtereenvolgens gespeeld moeten worden kan aangeven. Vervolgens moet je willekeurig kiezen uit de noten C, D, E, F, G, A en B. Optioneel (50% kans) moet je bij de noten C, D, F, G en A een sharp noteren (#). Zet de uitkomst van het muziekstuk in een label, textbox, MessageBox of geef de output in de console.
 
